--- a/client/package.json
+++ b/client/package.json
@@ -20,10 +20,14 @@
     "framer-motion": "^11.0.13",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.3",
     "react-icons": "^5.0.1",
+    "react-paginate": "^8.2.0",
     "react-redux": "^9.1.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.22.3",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "swiper": "^11.1.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
