--- a/client/package.json
+++ b/client/package.json
@@ -17,11 +17,12 @@
     "@heroicons/react": "^2.1.1",
     "@reduxjs/toolkit": "^2.2.2",
     "firebase": "^10.10.0",
-    "framer-motion": "^11.0.13",
+    "framer-motion": "^11.1.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.3",
     "react-icons": "^5.0.1",
+    "react-intersection-observer": "^9.8.2",
     "react-paginate": "^8.2.0",
     "react-redux": "^9.1.0",
     "react-responsive-carousel": "^3.2.23",
